# rust-experiment

./: .gitignore  Cargo.toml  DockerFile  Dockerfile  README.md  log4rs.yaml
.devcontainer/: devcontainer.json
.github/workflows/: rust.yml
k8s/: deployment.yaml
kubernetes-infra-deployment/: service.yaml
src/: api_handler.rs  main.rs  routes.rs
