[package]
name = "rust-experiment"
version = "0.1.0"
authors = ["nishantmehta.n@gmail.com"]
edition = "2021"

[dependencies]
actix-web = "4"
log4rs = "1"
log = "0.4"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "*", features = ["serde"] }